derive/tests/snapshots/unique_single_column_index/Account/create_account.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `account` table.
    pub fn create_account<'a>(
        &'a self,
        account: CreateAccount,
    ) -> Result<Account, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let external_id = account.external_id;
        let account = Account { id, external_id };
        let unique_column_values = (account.id.clone(), account.external_id.clone());
        match self.db().account().try_insert(account) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "account".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {}, external_id : {} }}", unique_column_values.0,
                                unique_column_values.1
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "account".into(),
                        })
                    }
                }
            }
        }
    }
}
