derive/tests/snapshots/unique_single_column_index/Account/get_account_by_external_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Account` from the `account` table whose value matches the value from the unique single-column btree index on the `external_id` column.*/
    pub fn get_account_by_external_id<'a>(
        &'a self,
        external_id: &u64,
    ) -> Result<Account, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().account().external_id().find(external_id) {
            Some(account) => Ok(account),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "account".into(),
                    column_names_and_row_values: format!(
                        "{{ external_id : {} }}", external_id
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Account` from the `account` table whose value matches the value from the unique single-column btree index on the `external_id` column.*/
    pub fn get_account_by_external_id<'a>(
        &'a self,
        external_id: &u64,
    ) -> Result<Account, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().account().external_id().find(external_id) {
            Some(account) => Ok(account),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "account".into(),
                    column_names_and_row_values: format!(
                        "{{ external_id : {} }}", external_id
                    )
                        .into(),
                });
            }
        }
    }
}
