derive/tests/snapshots/unique_single_column_index/Account/get_account_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Account` from the `account` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_account_by_id<'a>(
        &'a self,
        id: impl Into<AccountId> + Clone,
    ) -> Result<Account, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().account().id().find(id.clone().into().value()) {
            Some(account) => Ok(account),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "account".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Account` from the `account` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_account_by_id<'a>(
        &'a self,
        id: impl Into<AccountId> + Clone,
    ) -> Result<Account, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().account().id().find(id.clone().into().value()) {
            Some(account) => Ok(account),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "account".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
