derive/tests/snapshots/unique_single_column_index/Account/get_all_accounts.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `account` table.
    pub fn get_all_accounts<'a>(&'a self) -> impl Iterator<Item = Account> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().account().iter()
    }
}
