derive/tests/snapshots/unique_single_column_index/Account/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct AccountId {
    value: u64,
}
impl Default for AccountId {
    fn default() -> AccountId {
        AccountId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for AccountId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "AccountId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for AccountId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Account> for AccountId {
    fn from(value: &Account) -> Self {
        AccountId {
            value: value.id.clone(),
        }
    }
}
impl From<&Account> for Option<AccountId> {
    fn from(value: &Account) -> Option<AccountId> {
        Some(AccountId {
            value: value.id.clone(),
        })
    }
}
impl From<&AccountId> for Option<AccountId> {
    fn from(value: &AccountId) -> Option<AccountId> {
        use crate::spacetimedsl::Wrapper;
        Some(AccountId::new(value.value()))
    }
}
impl From<&AccountId> for AccountId {
    fn from(value: &AccountId) -> Self {
        use crate::spacetimedsl::Wrapper;
        AccountId::new(value.value())
    }
}
impl Account {
    ///
    pub fn get_id(&self) -> AccountId {
        use crate::spacetimedsl::Wrapper;
        AccountId::new(self.id.clone())
    }
    ///
    pub fn get_external_id(&self) -> &u64 {
        use crate::spacetimedsl::Wrapper;
        &self.external_id
    }
    ///
    pub fn get_external_id_mut(&mut self) -> &mut u64 {
        use crate::spacetimedsl::Wrapper;
        &mut self.external_id
    }
    ///
    pub fn set_external_id(&mut self, external_id: u64) -> u64 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.external_id, external_id);
        old_value
    }
}
///
pub struct CreateAccount {
    pub external_id: u64,
}

// Generated DSL methods:
// count_of_all_accounts
// create_account
// delete_account_by_external_id
// delete_account_by_id
// get_account_by_external_id
// get_account_by_id
// get_all_accounts
// update_account_by_id
