derive/tests/snapshots/unique_single_column_index/Account/update_account_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Account` row of the `account` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_account_by_id<'a>(
        &'a self,
        account: Account,
    ) -> Result<Account, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut account = account;
        let account = self.db().account().id().update(account);
        Ok(account)
    }
}
